fix button white space

--- a/src/sass/_sections.scss
+++ b/src/sass/_sections.scss
@@ -860,6 +860,7 @@
                 padding-top: 20px;
                     .btn{
                         margin-bottom: 20px;
+                        min-width: 160px;
                         @media (min-width: 481px){
                             &:not(:last-child){
                                 margin-right: 20px;
