--- a/src/sass/_uikit.scss
+++ b/src/sass/_uikit.scss
@@ -155,6 +155,7 @@ h5{
     line-height: 48px;
     max-width: 160px;
     width: 100%;
+    white-space: nowrap;
     //&-sm {
     //    min-width: 160px;
     //
